--- a/OutOfRed/app/src/main/res/values/strings.xml
+++ b/OutOfRed/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Deal!</string>
+
+    <string-array name="parcelas_array">
+        <item>Pagar a vista</item>
+        <item>Pagar em 2x</item>
+        <item>Pagar em 3x</item>
+        <item>Pagar em 4x</item>
+        <item>Pagar em 5x</item>
+        <item>Pagar em 6x</item>
+    </string-array>
+
 </resources>
